<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

  <ImageView
      android:id="@+id/iv_finish"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="right"
      android:layout_marginRight="@dimen/padding_large"
      android:layout_marginTop="@dimen/padding_small"
      android:src="@drawable/ic_finish" />

  <com.aktt.news.widget.image.HeadImageView
      android:id="@+id/id_avatar"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/padding_large"
      android:src="@drawable/default_head" />

  <TextView
      android:id="@+id/id_login_type"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/padding_normal"
      android:text="@string/select_avatar"
      android:textSize="@dimen/font_big" />

  <ViewFlipper
      android:id="@+id/id_toggle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_large"
      android:layout_marginRight="@dimen/padding_large"
      android:layout_marginTop="10dp">

    <include layout="@layout/include_login_mobile" />

    <include layout="@layout/include_login_sms" />

  </ViewFlipper>

  <TextView
      android:id="@+id/tv_login"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_marginLeft="@dimen/padding_large"
      android:layout_marginRight="@dimen/padding_large"
      android:layout_marginTop="@dimen/padding_large"
      android:background="@drawable/bg_btn_login"
      android:gravity="center"
      android:text="@string/register"
      android:textColor="@color/white"
      android:textSize="@dimen/font_big" />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="@dimen/padding_large"
      android:paddingRight="@dimen/padding_large"
      android:paddingTop="@dimen/padding_small">

    <TextView
        android:id="@+id/tv_change_login_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/register_by_mobile"
        android:textColor="@color/main_color"
        android:textSize="@dimen/font_main"
        android:visibility="gone" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_small"
        android:text="@string/back_to_login"
        android:textColor="@color/main_color"
        android:textSize="@dimen/font_main" />
  </RelativeLayout>
</LinearLayout>
