<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/padding_normal"
    android:paddingRight="@dimen/padding_normal"
    android:paddingTop="@dimen/padding_large">

  <com.chaoneng.ilooknews.widget.image.HeadImageView
      android:id="@+id/iv_avatar"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginRight="@dimen/padding_normal" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:textColor="@color/one_text_color"
        tools:text="@string/test_text_short" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:textColor="@color/three_text_color"
        android:textSize="@dimen/font_small"
        tools:text="@string/test_time" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/two_text_color"
        tools:text="@string/test_text_long" />

    <LinearLayout
        android:id="@+id/container_refer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:background="@color/bg_white_gray">

      <ImageView
          android:id="@+id/iv_refer"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginLeft="0dp" />

      <TextView
          android:id="@+id/tv_refer"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:ellipsize="end"
          android:gravity="center|start"
          android:lines="2"
          android:padding="8dp"
          android:textColor="@color/two_text_color"
          android:textSize="@dimen/font_small"
          tools:text="@string/test_text_long" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/tv_share"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:drawableLeft="@drawable/ic_profile_talk"
          android:drawablePadding="@dimen/padding_small"
          android:gravity="center_vertical"
          android:text="@string/share" />

      <TextView
          android:id="@+id/tv_up"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_marginRight="@dimen/padding_normal"
          android:drawableLeft="@drawable/ic_profile_talk"
          android:drawablePadding="@dimen/padding_small"
          android:gravity="center_vertical"
          tools:text="123" />

      <TextView
          android:id="@+id/tv_comment"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:drawableLeft="@drawable/ic_profile_talk"
          android:drawablePadding="@dimen/padding_small"
          android:gravity="center_vertical"
          tools:text="123" />
    </LinearLayout>

  </LinearLayout>

</LinearLayout>