<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

  <com.chaoneng.ilooknews.widget.image.HeadImageView
      android:id="@+id/iv_avatar"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_margin="12dp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginRight="12dp"
      android:divider="@drawable/divider_line_horizontal"
      android:orientation="vertical"
      android:showDividers="middle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

      <TextView
          android:id="@+id/tv_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/one_text_color"
          android:textSize="@dimen/font_big"
          android:visibility="visible"
          tools:text="@string/test_text_short" />

      <TextView
          android:id="@+id/tv_intro"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/tv_name"
          android:layout_marginTop="@dimen/padding_small"
          android:ellipsize="end"
          android:maxLines="1"
          android:textColor="@color/two_text_color"
          android:textSize="@dimen/font_normal"
          tools:text="@string/test_text_medium" />

      <TextView
          android:id="@+id/tv_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:textColor="@color/three_text_color"
          android:textSize="@dimen/font_small"
          tools:text="四天前" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title_one"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textColor="@color/one_text_color"
        android:textSize="@dimen/font_normal"
        tools:text="@string/test_text_long" />

    <TextView
        android:id="@+id/tv_title_two"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textColor="@color/one_text_color"
        android:textSize="@dimen/font_normal"
        tools:text="@string/test_text_long" />
  </LinearLayout>

</LinearLayout>